--- a/IntershipsZ7/IntershipsZ7/Views/MainWindow.xaml
+++ b/IntershipsZ7/IntershipsZ7/Views/MainWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IntershipsZ7"
-        xmlns:vm="clr-namespace:IntershipsZ7.ViewModels"
         mc:Ignorable="d"
         Title="IntershipsZ8" Height="501.165" Width="525"
         Closing="Window_Closing">
@@ -12,7 +11,6 @@
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
     </Window.Resources>
-
     <Grid>
         <ListView  x:Name="ImmoList" HorizontalAlignment="Left" Height="319" VerticalAlignment="Top" Width="120" ItemsSource="{Binding ImmoObsCol}" SelectedItem="{Binding SelectedListView}"   >
             <ListView.View >
@@ -23,24 +21,8 @@
         </ListView>
         <GroupBox Header="DetailView" HorizontalAlignment="Left" Height="319" Margin="120,0,0,0" VerticalAlignment="Top" Width="397">
             <Grid IsSharedSizeScope="True" Margin="0,10,9,1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="7*"/>
-                    <ColumnDefinition Width="173*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid Grid.Row="0" Grid.ColumnSpan="2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" SharedSizeGroup="InfoLabels"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="Type ->"/>
-                    <ComboBox ItemsSource="{Binding TypesList}" DisplayMemberPath="TypeName" SelectedValue="{Binding SelectedType}" SelectedValuePath="Id" Grid.Column="1" IsSynchronizedWithCurrentItem="True"/>
-                </Grid>
                 <Grid Grid.Row="1"
-                      DataContext="{Binding SelectedImmo}" Grid.ColumnSpan="2">
+                      DataContext="{Binding ImmoEditorVM}" Grid.ColumnSpan="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" SharedSizeGroup="InfoLabels"/>
                         <ColumnDefinition Width="5*"/>
@@ -56,33 +38,37 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <Label Grid.Column="0" Grid.Row="0" Content="Name ->"/>
-                    <TextBox Name="Name" Grid.Column="1" Grid.Row="0" Text="{Binding Path=Name}" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
-                    <Label Grid.Column="0" Grid.Row="1" Content="Footage ->"/>
-                    <TextBox Name="Footage" Grid.Column="1" Grid.Row="1" Text="{Binding Path=Footage}" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged" />
-                    <Label Grid.Column="0" Grid.Row="2" Content="Location ->"/>
-                    <TextBox Name="Location" Grid.Column="1" Grid.Row="2" Text="{Binding Path=Location}" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
-                    <Label Grid.Column="0" Grid.Row=" 3" Content="Price ->"/>
-                    <TextBox Name="Price" Grid.Column="1" Grid.Row="3" Text="{Binding Path=Price}" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
-                    <Label Grid.Column="0" Grid.Row=" 4" Content="Number of Rooms ->"/>
-                    <TextBox Name="NumbRooms" Grid.Column="1" Grid.Row="4" Text="{Binding Path=NumbRooms}" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
-                    <Label Grid.Column="0" Grid.Row=" 5" Content="Apartmet type ->"/>
-                    <TextBox Name="TypeApart" Grid.Column="1" Grid.Row="5" Text="{Binding Path=TypeApart}" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
-                    <Label Grid.Column="0" Grid.Row=" 6" Content="Number of Floors ->"/>
-                    <TextBox Name="NumbFloors" Grid.Column="1" Grid.Row="6" Text="{Binding Path=NumbFloors}" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
-                    <Label Grid.Column="0" Grid.Row="7" Content="Plot size ->"/>
-                    <TextBox Name="SizePlot" Grid.Column="1" Grid.Row="7" Text="{Binding Path=SizePlot}" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
-                    <Label Grid.Column="0" Grid.Row="8" Content="Assigment ->"/>
-                    <TextBox Name="Assigment" Grid.Column="1" Grid.Row="8" Text="{Binding Path=Assigment}" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
+                    <Label Grid.Column="0" Grid.Row="0" Content="Type ->"/>
+                    <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Path=TypesList}" DisplayMemberPath="TypeName" SelectedValue="{Binding SelectedType}" SelectedValuePath="Id"  IsSynchronizedWithCurrentItem="True" Grid.ColumnSpan="2"/>
+                    <Label Grid.Column="0" Grid.Row="1" Content="Name ->"/>
+                    <TextBox Name="Name" Grid.Column="1" Grid.Row="1" Text="{Binding Name, Mode=TwoWay}" Grid.ColumnSpan="2" />
+                    <Label Grid.Column="0" Grid.Row="2" Content="Footage ->"/>
+                    <TextBox Name="Footage" Grid.Column="1" Grid.Row="2" Text="{Binding Footage, Mode=TwoWay}" Grid.ColumnSpan="2" />
+                    <Label Grid.Column="0" Grid.Row="3" Content="Location ->"/>
+                    <TextBox Name="Location" Grid.Column="1" Grid.Row="3" Text="{Binding Location}" Grid.ColumnSpan="2" />
+                    <Label Grid.Column="0" Grid.Row="4" Content="Price ->"/>
+                    <TextBox Name="Price" Grid.Column="1" Grid.Row="4" Text="{Binding Price}" Grid.ColumnSpan="2" />
+                    <Label Grid.Column="0" Grid.Row="5" Content="Number of Rooms ->"/>
+                    <TextBox Name="NumbRooms" Grid.Column="1" Grid.Row="5" Text="{Binding NumbRooms}" Grid.ColumnSpan="2" />
+                    <Label Grid.Column="0" Grid.Row="6" Content="Apartmet type ->"/>
+                    <TextBox Name="TypeApart" Grid.Column="1" Grid.Row="6" Text="{Binding TypeApart}" Grid.ColumnSpan="2" />
+                    <Label Grid.Column="0" Grid.Row="7" Content="Number of Floors ->"/>
+                    <TextBox Name="NumbFloors" Grid.Column="1" Grid.Row="7" Text="{Binding NumbFloors}" Grid.ColumnSpan="2" />
+                    <Label Grid.Column="0" Grid.Row="8" Content="Plot size ->"/>
+                    <TextBox Name="SizePlot" Grid.Column="1" Grid.Row="8" Text="{Binding SizePlot}" Grid.ColumnSpan="2" />
+                    <Label Grid.Column="0" Grid.Row="9" Content="Assigment ->"/>
+                    <TextBox Name="Assigment" Grid.Column="1" Grid.Row="9" Text="{Binding Assigment}" Grid.ColumnSpan="2"/>
                 </Grid>
 
             </Grid>
 
         </GroupBox>
-        <Button Content="Save" Command="{Binding SaveCommand}" HorizontalAlignment="Left" Margin="10,338,0,0" VerticalAlignment="Top" Width="124" Height="37" IsEnabled="{Binding IsEnabledButton}"/>
-        <ProgressBar HorizontalAlignment="Right" Margin="10,338,10,0" VerticalAlignment="Top" Width="350" Height="37" IsIndeterminate="True" Visibility="{Binding IsPBVisible, Converter={StaticResource BoolToVisConverter}}"></ProgressBar>
-        <Button Content="Repeal" Command="{Binding RepealCommand}" HorizontalAlignment="Left" Margin="10,404,0,0" VerticalAlignment="Top" Width="124" Height="37" IsEnabled="{Binding IsChange}" />
-
+        <Grid>
+            <Button Content="Save" Command="{Binding SaveCommand}" HorizontalAlignment="Left" Margin="10,338,0,0" VerticalAlignment="Top" Width="124" Height="37" IsEnabled="{Binding IsEnabledButton}"/>
+            <ProgressBar HorizontalAlignment="Right" Margin="10,338,10,0" VerticalAlignment="Top" Width="350" Height="37" IsIndeterminate="True" Visibility="{Binding IsPBVisible, Converter={StaticResource BoolToVisConverter}}"></ProgressBar>
+            <Button Content="Repeal" Command="{Binding RepealCommand}" HorizontalAlignment="Left" Margin="10,404,0,0" VerticalAlignment="Top" Width="124" Height="37" IsEnabled="{Binding IsChange}" />
+        </Grid>
     </Grid>
 </Window>
